# blackrainbow

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENTS.md  README.md  package.json
.github/: Update.md
Source/Script/: Fa.ts  Ta.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Source/: main.rs
