[package]
name = "tauri"
version = "0.0.1"

[build]
target-dir = "Target"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
tauri = { version = "2.1.1", features = ["api-all", "devtools", "system-tray"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }

[features]
custom-protocol = ["tauri/custom-protocol"]

default = []
Debug = ["unbug/enable"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["shellscalingapi"] }

[[bin]]
name = "Build"
path = "build.rs"

[dependencies]
unbug = { version = "0.3.0", features = ["enable"] }
